tests/NormalTests/paczka1/small_fuzzy/58439823.err
Error in line 2: ald21 A920 20,34
Error in line 4: QHHTBWDScx A492 17,5
Error in line 7: QHHTBWDScx S548 48,3
